# server/routes.js
@@ -1,4 +1,5 @@
 import user from "./api/v1/controllers/user/routes";
+import placeOrder from "./api/v1/controllers/placeOrder/routes";
 
 /**
  *
@@ -8,6 +9,7 @@ import user from "./api/v1/controllers/user/routes";
  */
 export default function routes(app) {
   app.use("/api/v1/user", user)
+  app.use("/api/v1/placeOrder", placeOrder)
 
 
   return app;
